<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_add_city">Add City</string>
    <string name="action_settings">Settings</string>

    <!--Errors-->
    <string name="error_location_no_permission">No permission to obtain location</string>
    <string name="error_location_gps_disabled">GPS is disabled</string>
    <string name="error_location_no_location">Cannot obtain location</string>

    <!--Week day-->
    <string name="week_day_monday_short">Mo</string>
    <string name="week_day_tuesday_short">Tu</string>
    <string name="week_day_wednesday_short">We</string>
    <string name="week_day_thursday_short">Th</string>
    <string name="week_day_friday_short">Fr</string>
    <string name="week_day_saturday_short">St</string>
    <string name="week_day_sunday_short">Su</string>
    <string name="day_today_short">Today</string>
    <string name="day_tomorrow_short">Tmrw</string>


    <string name="weather_current_pressure">Pressure</string>
    <string name="weather_current_humidity">Humidity</string>
    <string name="weather_current_wind">Wind</string>
    <string name="weather_current_visibility">Visibility</string>
    <string name="weather_today">Today</string>
    <string name="weather_hourly_now">Now</string>
    <string name="weather_daily_weather">Daily Weather</string>

    <string name="city_name_current_location">Current location</string>
</resources>